# elfredo

./: Cargo.toml  Dockerfile  README.md  build.sh
.github/workflows/: rust.yml
example/: Cargo.toml  person.json
example/src/: main.rs  my_embeditor.rs
src/: binpatch.rs  data_entry.rs  embeditor.rs  lib.rs
src/for_tests/: test_echo_patch_elf.rs
tests/: test_features.rs
