[package]
name = "untitled"
version = "0.1.0"
authors = ["Asaf Fisher <asaffisher@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-binutils = "0.3.3"
clap = "3.0.0-beta.2"
goblin = "0.4.0"
tempfile = "3.2.0"
[[bin]]
name = "binpatch"
path = "src/bin/binpatch.rs"
