[package]
name = "elfredo"
version = "0.1.0"
authors = ["Asaf Fisher <asaffisher@icloud.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
cargo-binutils = "0.3.3"
clap = "3.0.0-beta.2"
crc = "1.8.1"
goblin = "0.4.0"
serde = "1.0.125"
tempfile = "3.2.0"
failure = "0.1.8"
serde_json = "1.0.64"

[workspace]

members = [
    "example",
]

[[bin]]
name = "test_echo_patch_elf"
path = "src/for_tests/test_echo_patch_elf.rs"
